just fixing the changes