@@ -81,7 +81,7 @@ public final class CartoParser extends CartoScanner {
     }
 
     private Expression parseBinaryExpression(int prec) {
-        Expression result = parsePrimaryExpression();
+        Expression result = parseUnaryExpression();
         for (int prec1 = peek().getType().getPrecedence(); prec1 >= prec; prec1--) {
             while (peek().getType().getPrecedence() == prec1) {
                 Token operation = next();
@@ -93,115 +93,149 @@ public final class CartoParser extends CartoScanner {
         return result;
     }
 
-    private Expression parsePrimaryExpression() {
-        /*
-            $(this.entities.call) ||
-            $(this.entities.literal) ||
-            $(this.entities.field) ||
-            $(this.entities.variable) ||
-            $(this.entities.url) ||
-            $(this.entities.keyword);
-         */
-
-        Expression result;
+    private Expression parseUnaryExpression() {
         switch (peek().getType()) {
-            case Function:
-                // fname(
-                Token f = next();
-                String func = f.text;
-                result = new Call(func.substring(0, func.length() - 1), parseArgumentsExpression());
-                break;
+            case ADD:
+            case SUB:
+                Token op = next();
+                Expression expression = parseUnaryExpression();
+                return new UnaryOperation(op.getText(), expression);
+            default:
+                return parsePrimaryExpression();
+        }
+    }
 
-            case Uri:
-                result = new Url(((UriToken) next()).unquotedText);
-                break;
-
-            case Number:
-                result = new Literal(((NumericToken) next()).n);
-                break;
-
-            case Identifier:
-                Token idToken = next();
-                switch (idToken.text) {
-                    case "true":
-                        result = new Boolean(true);
-                        break;
-                    case "false":
-                        result = new Boolean(false);
-                        break;
-                    default:
-                        result = Colors.Strings.get(idToken.text);
-                        if (result == null) {
-                            result = new Keyword(idToken.text);
-                        }
-                }
-                break;
+    private Expression parsePrimaryExpression() {
+        switch (peek().getType()) {
+            case NUMBER_LITERAL:
+                return new Literal(Double.valueOf(next().getText()));
+            case STRING_LITERAL:
+                return new Quoted(next().getText());
+            case TRUE_LITERAL:
+                next();
+                return new Boolean(true);
+            case FALSE_LITERAL:
+                next();
+                return new Boolean(false);
 
             case VARIABLE:
-                result = new Variable(next().text);
-                break;
+                return new Variable(next().getText());
 
-            case HASHNAME:
-                Token hexToken = next();
-                if (hexToken.text.length() != 7) {
-                    throw new UnexpectedTokenException(hexToken.text);
-                }
-
-                int r = Integer.parseInt(hexToken.text.substring(1, 3), 16);
-                int g = Integer.parseInt(hexToken.text.substring(3, 5), 16);
-                int b = Integer.parseInt(hexToken.text.substring(5, 7), 16);
-                result = new Color(r, g, b);
-                break;
-
-            case Color:
-                ComponentColor colorToken = (ComponentColor) next();
-                result = new Color(colorToken.getR(), colorToken.getG(), colorToken.getB(), colorToken.getA());
-                break;
-
-            case String:
-                result = new Quoted(((StringValueToken) next()).unquotedText);
-                break;
-
-            case Dimension:
-                NumericWithUnitToken dimensionToken = (NumericWithUnitToken) next();
-                result = new Dimension(dimensionToken.n, dimensionToken.unit);
-                break;
-
-            case Delimiter:
-                if (accept(Token.Type.Delimiter, "(") != null) {
-                    Expression e = parseExpression();
-                    expect(Token.Type.Delimiter, ")");
-                    result = e;
-                    break;
-                }
-
-            default:
-                throw new UnexpectedTokenException(peek().text);
         }
 
-        return result;
+        throw new NotImplementedException();
     }
 
-    private Collection<Expression> parseArgumentsExpression() {
-        Collection<Expression> args = new ArrayList<>();
-        expect(TokenType.LPAREN);
-        boolean done = peek().getType() == TokenType.RPAREN;
-        while (!done) {
-            Expression argument = parseExpression();
-            args.add(argument);
-            if (args.size() > MaxArguments) {
-                throw new CartoshkaException("too_many_arguments");
-            }
-
-            done = peek().getType() == TokenType.RPAREN;
-            if (!done) {
-                expect(TokenType.COMMA);
-            }
-        }
-
-        expect(TokenType.RPAREN);
-        return args;
-    }
+//
+//    private Expression parsePrimaryExpression() {
+//        /*
+//            $(this.entities.call) ||
+//            $(this.entities.literal) ||
+//            $(this.entities.field) ||
+//            $(this.entities.variable) ||
+//            $(this.entities.url) ||
+//            $(this.entities.keyword);
+//         */
+//
+//        Expression result;
+//        switch (peek().getType()) {
+//            case Function:
+//                // fname(
+//                Token f = next();
+//                String func = f.text;
+//                result = new Call(func.substring(0, func.length() - 1), parseArgumentsExpression());
+//                break;
+//
+//            case Uri:
+//                result = new Url(((UriToken) next()).unquotedText);
+//                break;
+//
+//            case Number:
+//                result = new Literal(((NumericToken) next()).n);
+//                break;
+//
+//            case Identifier:
+//                Token idToken = next();
+//                switch (idToken.text) {
+//                    case "true":
+//                        result = new Boolean(true);
+//                        break;
+//                    case "false":
+//                        result = new Boolean(false);
+//                        break;
+//                    default:
+//                        result = Colors.Strings.get(idToken.text);
+//                        if (result == null) {
+//                            result = new Keyword(idToken.text);
+//                        }
+//                }
+//                break;
+//
+//            case VARIABLE:
+//                result = new Variable(next().text);
+//                break;
+//
+//            case HASHNAME:
+//                Token hexToken = next();
+//                if (hexToken.text.length() != 7) {
+//                    throw new UnexpectedTokenException(hexToken.text);
+//                }
+//
+//                int r = Integer.parseInt(hexToken.text.substring(1, 3), 16);
+//                int g = Integer.parseInt(hexToken.text.substring(3, 5), 16);
+//                int b = Integer.parseInt(hexToken.text.substring(5, 7), 16);
+//                result = new Color(r, g, b);
+//                break;
+//
+//            case Color:
+//                ComponentColor colorToken = (ComponentColor) next();
+//                result = new Color(colorToken.getR(), colorToken.getG(), colorToken.getB(), colorToken.getA());
+//                break;
+//
+//            case String:
+//                result = new Quoted(((StringValueToken) next()).unquotedText);
+//                break;
+//
+//            case Dimension:
+//                NumericWithUnitToken dimensionToken = (NumericWithUnitToken) next();
+//                result = new Dimension(dimensionToken.n, dimensionToken.unit);
+//                break;
+//
+//            case Delimiter:
+//                if (accept(Token.Type.Delimiter, "(") != null) {
+//                    Expression e = parseExpression();
+//                    expect(Token.Type.Delimiter, ")");
+//                    result = e;
+//                    break;
+//                }
+//
+//            default:
+//                throw new UnexpectedTokenException(peek().text);
+//        }
+//
+//        return result;
+//    }
+//
+//    private Collection<Expression> parseArgumentsExpression() {
+//        Collection<Expression> args = new ArrayList<>();
+//        expect(TokenType.LPAREN);
+//        boolean done = peek().getType() == TokenType.RPAREN;
+//        while (!done) {
+//            Expression argument = parseExpression();
+//            args.add(argument);
+//            if (args.size() > MaxArguments) {
+//                throw new CartoshkaException("too_many_arguments");
+//            }
+//
+//            done = peek().getType() == TokenType.RPAREN;
+//            if (!done) {
+//                expect(TokenType.COMMA);
+//            }
+//        }
+//
+//        expect(TokenType.RPAREN);
+//        return args;
+//    }
 
     private Node parseRuleSet() {
         throw new NotImplementedException();
